# aws-cdk-devsecops-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLATFORM_STATUS.md  README.md  analysis_report.json  app.py  cdk.json  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_report.json
.github/workflows/: cd.yml  ci.yml  security.yml
.trunk/: trunk.yaml
docs/: changelog.md  faq.md  index.md
docs/api/: cli.md  index.md  python.md  rest.md
docs/architecture/: data-pipeline.md  infrastructure.md  monitoring.md  overview.md  security.md
docs/compliance/: soc2.md
docs/conventions/: aws-resource-naming.md  aws-resource-tagging.md  validation-framework.md
docs/developer-guide/: constructs.md  extending.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/operations/: deployment.md  monitoring.md
docs/production/: production-readiness-checklist.md
docs/security/: overview.md
docs/tutorials/: first-pipeline.md  ml-workflow.md
docs/user-guide/: best-practices.md  cli.md  portal.md  templates.md
infrastructure/config/: settings.py
infrastructure/constructs/: __init__.py
infrastructure/constructs/ai_ml/: __init__.py  bedrock_construct.py  model_deployment_construct.py  sagemaker_construct.py
infrastructure/constructs/common/: __init__.py  base.py  config.py  conventions.py  mixins.py  types.py  utils.py  validators.py
infrastructure/constructs/data_ingestion/: __init__.py  api_ingestion.py  batch_ingestion.py  database_ingestion.py  file_ingestion.py  raw_data_ingestion.py  realtime_ingestion.py  streaming_ingestion.py
infrastructure/constructs/infrastructure/: __init__.py  dynamodb_construct.py  ec2_construct.py  ecs_construct.py  lambda_construct.py  rds_construct.py  vpc_construct.py
infrastructure/constructs/messaging/: __init__.py  kinesis_construct.py  msk_construct.py  sns_construct.py  sqs_construct.py
infrastructure/stacks/: ai_tools_stack.py  core_infrastructure_stack.py  data_pipeline_stack.py  monitoring_stack.py  portal_stack.py  security_stack.py
platform/cli/: config.py  github.py
platform_tools/cli/: aws.py  main.py  templates.py
scripts/: analyze_platform.py  deploy-production.sh  test_platform.py
security/: compliance.py  scanner.py
security/rules/: gdpr.yaml  iso27001.yaml  soc2.yaml
templates/data-pipeline/: cookiecutter.json  template.json
templates/data-pipeline/{{ cookiecutter.project_slug }}/: README.md  app.py  cdk.json
tests/integration/: test_cli_integration.py
tests/smoke/: test_basic_health.py
tests/unit/: test_conventions.py  test_core_infrastructure.py  test_security_scanner.py
